# 1d_stencil_example

./: CMakeLists.txt  main.cu
